--- a/hobbies.html
+++ b/hobbies.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Hobbies</title>
-</head>
+    <link rel="stylesheet" href="./css/styles.css" </head>
+
 <body>
     <h3>Hobbies</h3>
-<ol type="i">
- <li> Badminton</li>
- <li> Chess</li>
- <li> Feel Songs</li>
- <li> Travelling </li>
-</ol>
-    
+    <ol type="i">
+        <li> Badminton</li>
+        <li> Chess</li>
+        <li> Feel Songs</li>
+        <li> Travelling </li>
+    </ol>
+
 </body>
+
 </html>
