--- a/index.html
+++ b/index.html
@@ -1,78 +1,83 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="UTF-8">
-    <title>Ayush Mandliya's personal site</title>
-    
+   <meta charset="UTF-8">
+   <title>Ayush Mandliya's personal site</title>
+   <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
-   <table cellspacing ="25">
+   <table cellspacing="25">
       <tr>
-         <td><img src = "Ayush.jpeg"alt ="Ayush profile pic"height="270"width="200"class="cropimg"></td>
-         <td><h1>Mr. Ayush Mandliya</h1>
-            <p><em>Student of <strong><a href="https://www.juet.ac.in/">Jaypee University of Engineering And Technology.</a> </strong></em></p>
+         <td><img src="Ayush.jpeg" alt="Ayush profile pic" height="270" width="200" class="cropimg"></td>
+         <td>
+            <h1> Ayush Mandliya </h1>
+            <p><em>Student of <strong><a href="https://www.juet.ac.in/">Jaypee University of Engineering And
+                        Technology.</a> </strong></em></p>
             <p>I am a <strong> web developer</strong> and learning enthusiast.</p>
          </td>
       </tr>
    </table>
- <hr>
- <h3>Interseted Subjects</h3>
- <ul>
-    <li>Object Oriented Programming</li>
-    <li>Data Structures</li>
-    <li>Database Management System</li>
-    <li>Computer Networks</li>
-    <li>Operating System</li>
- </ul>
- <hr>
- <h3>Education</h3>
- <table border ="1">
-    <thead>
-        <tr>
-         <th>Year</th>
-         <th>Class</th>
-         <th>School</th>
-         <th>Percentage</th>
-        </tr>
-    </thead>
-  <tbody>
-   <tr>
-      <td>2020</td>
-      <td>12th</td>
-      <td>Holy Mother Sharda School , Kota</td> 
-      <td>83.6%</td>
-    </tr>
-    <tr>
-       <td>2018</td>
-       <td>10th</td>
-       <td>Bhuvnesh Bal Vidyalaya , Kota</td>
-       <td>83.5%</td>
-    </tr>
-  </tbody>
+   <hr>
+   <h3>Interseted Subjects</h3>
+   <ul>
+      <li>Object Oriented Programming</li>
+      <li>Data Structures</li>
+      <li>Database Management System</li>
+      <li>Computer Networks</li>
+      <li>Operating System</li>
+   </ul>
+   <hr>
+   <h3>Education</h3>
+   <table border="1">
+      <thead>
+         <tr>
+            <th>Year</th>
+            <th>Class</th>
+            <th>School</th>
+            <th>Percentage</th>
+         </tr>
+      </thead>
+      <tbody>
+         <tr>
+            <td>2020</td>
+            <td>12th</td>
+            <td>Holy Mother Sharda School , Kota</td>
+            <td>83.6%</td>
+         </tr>
+         <tr>
+            <td>2018</td>
+            <td>10th</td>
+            <td>Bhuvnesh Bal Vidyalaya , Kota</td>
+            <td>83.5%</td>
+         </tr>
+      </tbody>
 
-  <tfoot>
+      <tfoot>
 
-  </tfoot>
- </table>
- <hr>
+      </tfoot>
+   </table>
+   <hr>
 
-<h5><a href="hobbies.html">My Hobbies</a></h5>
-<h5><a href="Contact_Me.html">Contact Me</a></h5>
-<hr>
+   <h5><a href="hobbies.html">My Hobbies</a></h5>
+   <h5><a href="Contact_Me.html">Contact Me</a></h5>
+   <hr>
 
-<h3>Skills</h3>
-<table cellspacing ="15">
+   <h3>Skills</h3>
+   <table cellspacing="15">
       <tr>
          <td>HTML </td>
          <td>⭐⭐⭐⭐⭐</td>
          <td>CSS</td>
          <td>⭐⭐⭐⭐⭐</td>
       </tr>
-      <tr><td>C</td>
+      <tr>
+         <td>C</td>
          <td>⭐⭐⭐⭐⭐</td>
-          <td>C++</td>
-          <td>⭐⭐⭐⭐</td>
+         <td>C++</td>
+         <td>⭐⭐⭐⭐</td>
       </tr>
       <tr>
          <td>Javascript</td>
@@ -98,7 +103,8 @@
          <td>Microsoft Excel</td>
          <td>⭐⭐</td>
       </tr>
- </table>
- <hr>
+   </table>
+   <hr>
 </body>
+
 </html>
