--- a/Contact_Me.html
+++ b/Contact_Me.html
@@ -5,7 +5,22 @@
     <meta charset="UTF-8">
 
     <title>Contact Me</title>
-</head>
+    <link rel="stylesheet" href="./css/styles.css" </head>
+
+    <style>
+        body {
+            background-color: azure;
+        }
+
+        hr {
+            border-style: none;
+            border-top-style: dotted;
+            border-color: gray;
+            border-width: 5px;
+            height: 0px;
+            width: 5%;
+        }
+    </style>
 
 <body>
     <h1>Contact Me</h1>
@@ -17,14 +32,14 @@
     <p>Permanent Address -Mandliya Sadan , In front of Uttam Kunj colony , Station Road Alote , District Ratlam Madhya
         Pradesh Pincode - 457114</p>
     <hr>
-        <form action="mailto:ayushmandliya5@gmail.com"method="post"Enctype="text/plain">
+    <form action="mailto:ayushmandliya5@gmail.com" method="post" Enctype="text/plain">
         <label>Your Name :</label>
-        <input type="text" name="YourName" id=""><br>      
+        <input type="text" name="YourName" id=""><br>
         <label>Your Email :</label>
         <input type="Email" name="YourEmail" id=""><br>
         <label for="">Your Message :</label><br>
         <textarea name="YourMessage" id="" cols="30" rows="10"></textarea>
-        <input type="Submit" name=""><br>             
+        <input type="Submit" name=""><br>
     </form>
 </body>
 
